--- a/templates/form.html
+++ b/templates/form.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Register</title>
 </head>
 
 {% block content %}
     <div class="content-section">
-    <form method="POST" action="pageGame">
+    <form method="POST" action="">
         {{ form.hidden_tag() }}
         {{ form.playerOne }}
         {{ form.playerTwo }}
