--- a/templates/pageOne.html
+++ b/templates/pageOne.html
@@ -16,8 +16,8 @@
   <h1> KALAHA </h1>
   <h2> Wybierz tryb rozgrywki </h2>
 
-  <a href="/pageGame">Gra z komputerem</a>
-  <a href="">Hot-seat</a>
+  <a href="">Gra z komputerem</a>
+  <a href="/register">Hot-seat</a>
   <a href="">Multiplayer online</a>
   <script src="js/scripts.js"></script>
 </body>
