--- a/templates/pageGame.html
+++ b/templates/pageGame.html
@@ -15,64 +15,95 @@
 <body>
   <h1> KALAHA </h1>
   <h2> Rozgrywka </h2>
+  <h3>Teraz kolei gracza {{ playerName }}</h3>
+  <h4>Gra gracz {{ turn }}</h4>
   <div class="container">
-      <div class="home column">{{ poles[0] }}</div>
+      <div class="home column">
+          <a href="pageGame.html">Dim 0 </a>
+          {{ poles[0] }}
+      </div>
+
       <div class="column">
            <div>
-               <a href="/move/13">Move</a>
+               {% if ((turn == 0) and (poles[13] != 0)) %}
+                   <a href="/move/13">Move</a>
+               {% endif %}
                {{ poles[13] }}
            </div>
            <div>
-               <a href="/move/1">Move</a>
+               {% if ((turn == 1) and (poles[1] != 0)) %}
+                   <a href="/move/1">Move</a>
+               {% endif %}
                {{ poles[1] }}
            </div>
       </div>
       <div class="column">
-           <div>
-               <a href="/move/12">Move</a>
+{#           <div class="count_{{ poles[12] }}">#}
+          <div>
+              {% if ((turn == 0) and (poles[12] != 0)) %}
+                   <a href="/move/12">Move</a>
+               {% endif %}
                {{ poles[12] }}
            </div>
            <div>
-               <a href="/move/2">Move</a>
+               {% if ((turn == 1) and (poles[2] != 0)) %}
+                   <a href="/move/2">Move</a>
+               {% endif %}
                {{ poles[2] }}</div>
       </div>
       <div class="column">
            <div>
-               <a href="/move/11">Move</a>
+               {% if ((turn == 0) and (poles[11] != 0)) %}
+                   <a href="/move/11">Move</a>
+               {% endif %}
                {{ poles[11] }}
            </div>
            <div>
-               <a href="/move/3">Move</a>
+               {% if ((turn == 1) and (poles[3] != 0)) %}
+                   <a href="/move/3">Move</a>
+               {% endif %}
                {{ poles[3] }}
            </div>
       </div>
       <div class="column">
            <div>
-               <a href="/move/10">Move</a>
+               {% if ((turn == 0) and (poles[10] != 0)) %}
+                   <a href="/move/10">Move</a>
+               {% endif %}
                {{ poles[10] }}
            </div>
            <div>
-               <a href="/move/4">Move</a>
+               {% if ((turn == 1) and (poles[4] != 0)) %}
+                   <a href="/move/4">Move</a>
+               {% endif %}
                {{ poles[4] }}
            </div>
       </div>
       <div class="column">
            <div>
-               <a href="/move/9">Move</a>
+               {% if ((turn == 0) and (poles[9] != 0)) %}
+                   <a href="/move/9">Move</a>
+               {% endif %}
                {{ poles[9] }}
            </div>
            <div>
-               <a href="/move/5">Move</a>
+               {% if ((turn == 1) and (poles[5] != 0)) %}
+                   <a href="/move/5">Move</a>
+               {% endif %}
                {{ poles[5] }}
            </div>
       </div>
       <div class="column">
            <div>
-               <a href="/move/8">Move</a>
+               {% if ((turn == 0) and (poles[8] != 0)) %}
+                   <a href="/move/8">Move</a>
+               {% endif %}
                {{ poles[8] }}
            </div>
            <div>
-               <a href="/move/6">Move</a>
+               {% if ((turn == 1) and (poles[6] != 0)) %}
+                   <a href="/move/6">Move</a>
+               {% endif %}
                {{ poles[6] }}
            </div>
       </div>
