--- a/templates/endGame.html
+++ b/templates/endGame.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../static/css/form.css">
+
 </head>
 <body>
+<h1 class="name"> Endgame</h1>
+<h2 class="tsentr"> Thanks for playing Kalaha!</h2>
+<div id="icons">
+    <div class="tryby">
+        <p class="pretty">{{ nameOne }}</p>
+        <p class="pretty">{{ sumaOne }}</p>
+    </div>
+    <div class="tryby">
+        <p class="pretty">WINNER:</p>
 
-{{ winner }}
+        <p class="pretty"> {{ winner }} </p>
+    </div>
+    <div class="tryby">
+        <div>
+        <p class="pretty">{{ nameTwo }}</p>
+        <p class="pretty">{{ sumaTwo }}</p>
+    </div>
+    </div>
+
+
+
+\
+
+</div>
+
+
 
 </body>
 </html>
