--- a/templates/pageGame.html
+++ b/templates/pageGame.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-  <h1> KALAHA </h1>
-  <h2> Rozgrywka </h2>
-  <h3>Teraz kolei gracza {{ playerName }}</h3>
-  <h4>Gra gracz {{ turn }}</h4>
+  <h1 class="name"> KALAHA </h1>
+  <h2 class="tsentr"> Game! </h2>
+  <h3 class="tsentr">It's turn for player: {{ playerName }}</h3>
+{#  <h4>Gra gracz {{ turn }}</h4>#}
   <div class="container">
       <div class="home column">
           {% if (poles[0] > 5) %}
