--- a/templates/pageOne.html
+++ b/templates/pageOne.html
@@ -8,17 +8,26 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="../static/css/pageOne.css">
 
 </head>
 
 <body>
-  <h1> KALAHA </h1>
-  <h2> Wybierz tryb rozgrywki </h2>
+  <h1 class="name"> KALAHA </h1>
+  <h2 class="tsentr"> Wybierz tryb rozgrywki </h2>
+  <div id="icons">
+      <div class="tryby">
+        <a href="/register"><i class="ikonka fas fa-gamepad fa-10x"></i>Hot-seat</a>
 
-  <a href="">Gra z komputerem</a>
-  <a href="/register">Hot-seat</a>
-  <a href="">Multiplayer online</a>
-  <script src="js/scripts.js"></script>
+      </div>
+      <div class="tryby">
+        <a href="/computer"><i class="ikonka fas fa-mask fa-10x"></i>Computer</a>
+
+      </div>
+  </div>
+
+
+  <script src="https://kit.fontawesome.com/f6140ca2bf.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
