Tryby komputer i hot-seat => done!

--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Game rules <3</title>
+    <link rel="stylesheet" href="../static/css/instructions.css">
 
 </head>
 <body>
+
+<div>
+    <h1 id="idol">Game Rules</h1>
+
+    <div class="diva">
+         <a class="tss" href="/">Back</a>
+  </div>
+
+    <h2 class="naming"><i class="fas fa-chess-board"></i>BOARD</h2>
+    <div class="paragrafs">
+        <p class="pa">The board has 12 small pits - HOUSES, and 2 big pits, called ENDS, at each end. </p>
+        <p class="pa">At the beginning of the game, four seeds are placed in each house. Ends are empty.</p>
+        <p class="pa">The object of the game is to capture more seeds than one's opponent.</p>
+        <p class="pa">Each player controls the six houses and their seeds on the player's side of the board. The player's score is the number of seeds in the store to their right.</p>
+
+
+    </div>
+     <h2 class="naming"><i class="fas fa-dice"></i>MOVES</h2>
+        <div class="paragrafs">
+            <p class="pa">Each player controls the six houses and their seeds on the player's side of the board. The player's score is the number of seeds in the store to their right.</p>
+            <p class="pa">Players take turns sowing their seeds. On a turn, the player removes all seeds from one of the houses under their control. </p>
+            <p class="pa">Moving counter-clockwise, the player drops one seed in each house in turn, including the player's own store but not their opponent's.</p>
+            <p class="pa">If the last sown seed lands in an empty house owned by the player, and the opposite house contains seeds, both the last seed and the opposite seeds are captured and placed into the player's store.</p>
+            <p class="pa">If the last sown seed lands in the player's store, the player gets an additional move. There is no limit on the number of moves a player can make in their turn.</p>
+
+        </div>
+
+    <h2 class="naming"><i class="fas fa-ghost"></i>CEL I KONIEC GRY</h2>
+    <div class="paragrafs">
+        <p class="pa">When one player no longer has any seeds in any of their houses, the game ends. The other player moves all remaining seeds to their store, and the player with the most seeds in their store wins.</p>
+        <p class="pa">It is possible for the game to end in a draw.</p>
+
+    </div>
+
+
+</div>
 
 </body>
 </html>
