--- a/templates/pageOne.html
+++ b/templates/pageOne.html
@@ -15,6 +15,10 @@
 <body>
   <h1 class="name"> KALAHA </h1>
   <h2 class="tsentr"> Wybierz tryb rozgrywki </h2>
+  <div class="diva">
+         <a class="tss" href="/rules">Game rules</a>
+  </div>
+
   <div id="icons">
       <div class="tryby">
         <a href="/register"><i class="ikonka fas fa-gamepad fa-10x"></i>Hot-seat</a>
