--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope');
-
 .tryby {
     background-color: white;
     display: flex;
@@ -14,9 +13,25 @@
      transition: width 2s;
 }
 
+.pretty {
+    margin-bottom:20px;
+    font-family: 'Annie Use Your Telescope', cursive;
+    font-size: 2rem;
+}
+#knopka {
+    width:10%;
+    margin-left:45%;
+    background-color: white;
+}
+#icons {
+    text-align:center;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
 .name {
     font-family: 'Annie Use Your Telescope', cursive;
-    font-size:4rem;
+    font-size:3rem;
     text-align:center;
 }
 .tsentr {
@@ -28,41 +43,7 @@
 
 }
 
-
-
-.tryby:hover {
-    width: 35%;
-  }
-
-
 body {
     background-image: url('../wallp.jpg');
     background-size: cover;
-}
-
-.ikonka {
-    color: #9ac5d2;
-}
-
-#icons {
-    text-align:center;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-}
-
-.diva {
-    width: 10%;
-    text-align:center;
-    margin-left:45%;
-    margin-top: 10px;
-    background-color: aliceblue;
-    padding: 5px;
-    border: 1px solid black;
-}
-.tss {
-    font-family: 'Annie Use Your Telescope', cursive;
-    text-decoration: none;
-    color: black;
-    font-size: 1.5rem;
 }
